<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_name">Project3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Project 3</string>
    <string name="customer_tab">Customers</string>
    <string name="order_tab">Orders</string>
    <string name="product_tab">Products</string>
    <string name="name_placeholder">Put name here…</string>
    <string name="description_placeholder">Put description here…</string>
    <string name="address_placeholder">Customer address here…</string>
    <string name="price_placeholder">Price goes here…</string>
    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="save">Save</string>
    <string name="add_customer_title">Add customer</string>
    <string name="save_customer_toast">Please, insert a name and an address to continue</string>
    <string name="customer_saved_snack">Customer saved!</string>
    <string name="customer_deleted">Customer deleted!</string>
    <string name="nav_customer">Customers</string>
    <string name="nav_product">Products</string>
    <string name="nav_order">Orders</string>
    <string name="dialog_customer_title">Delete customer</string>
    <string name="dialog_product_title">Delete product</string>
    <string name="dialog_order_title">Delete order</string>
    <string name="dialog_customer_confirmation">Are you sure you want to delete this customer?</string>
    <string name="dialog_product_confirmation">Are you sure you want to delete this product?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="snack_undo">undo</string>
    <string name="delete">Delete</string>
    <string name="product_description_label">Description</string>
    <string name="product_price_label">Price</string>
    <string name="add_product_title">Add product</string>
    <string name="save_product_toast">Please fill all the information in the form in order to add a product</string>
    <string name="product_saved_toast">Product saved!</string>
    <string name="product_deleted">Product deleted!</string>
    <string name="code_placeholder">Code here…</string>
    <string name="order_code">Code</string>
    <string name="order_qty">Quantity</string>
    <string name="order_price">Price</string>
    <string name="order_date">Date…</string>
    <string name="select">Select</string>
    <string name="select_customer">Select customer</string>
    <string name="select_product">Select product</string>
    <string name="add_order_title">Add order</string>
    <string name="order_created">Order created!</string>
    <string name="dialog_order_confirmation">Are you sure you want to delete this order?</string>
    <string name="order_deleted">Order deleted!</string>
    <string name="order_updated">Order updated!</string>
    <string name="dialog_cant_delete_customer">This customer has some orders related to it. Delete those before you
        delete this.
    </string>
    <string name="OK">OK</string>
    <string name="dialog_cant_delete_product">This product has some orders related to it. Delete those before you delete
        this.
    </string>
    <string name="customer_updated">Customer updated!</string>
    <string name="product_updated">Product updated!</string>
    <string name="save_order_toast">Please fill all fields to complete your request</string>
    <string name="dialog_select_info">There is no data in the database for the related object. Please come again once
        more data is available.
    </string>
    <string name="select_customer_pls">Select a customer to put in the order.</string>
    <string name="select_product_pls">Select a product to put in the order.</string>
</resources>
